# bartol-marketing

./: .gitignore  404.html  CNAME  _worker.js  index.dev.html  index.html  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml  wrangler.json  wrangler.jsonc
assets/css/: styles.css
assets/js/: main.js
brand/: IDENTITY.md
python/: optimizer.py
scripts/: process_assets.py  process_favicon_round.py  process_feedback_assets.py  process_v3_assets.py
sources/img/portfolio_images/: .gitignore
