[project]
name = "portfolio_cleaner"
version = "0.1.0"
requires-python = ">= 3.10"

[tool.poetry]
name = "portfolio_cleaner"
version = "0.1.0"
description = "Script to clean and convert images in a web project"
authors = ["Tomas Sexenian <cuentastomassexenian@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.8.4"
beautifulsoup4 = "^4.12.2"
pillow = "^10.2.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"